@@ -52,25 +52,26 @@ class SSTableSimpleUnsortedWriter extends AbstractSSTableSimpleWriter
     private static final Buffer SENTINEL = new Buffer();
 
     private Buffer buffer = new Buffer();
-    private final long bufferSize;
+    private final long maxSSTableSizeInBytes;
     private long currentSize;
 
     // Used to compute the row serialized size
     private final SerializationHeader header;
     private final SerializationHelper helper;
 
-    private final BlockingQueue<Buffer> writeQueue = new SynchronousQueue<Buffer>();
+    private final BlockingQueue<Buffer> writeQueue = new SynchronousQueue<>();
     private final DiskWriter diskWriter = new DiskWriter();
 
-    SSTableSimpleUnsortedWriter(File directory, TableMetadataRef metadata, RegularAndStaticColumns columns, long bufferSizeInMB)
+    SSTableSimpleUnsortedWriter(File directory, TableMetadataRef metadata, RegularAndStaticColumns columns, long maxSSTableSizeInMiB)
     {
         super(directory, metadata, columns);
-        this.bufferSize = bufferSizeInMB * 1024L * 1024L;
+        this.maxSSTableSizeInBytes = maxSSTableSizeInMiB * 1024L * 1024L;
         this.header = new SerializationHeader(true, metadata.get(), columns, EncodingStats.NO_STATS);
         this.helper = new SerializationHelper(this.header);
         diskWriter.start();
     }
 
+    @Override
     PartitionUpdate.Builder getUpdateFor(DecoratedKey key)
     {
         assert key != null;
@@ -91,7 +92,7 @@ class SSTableSimpleUnsortedWriter extends AbstractSSTableSimpleWriter
         // Note that the accounting of a row is a bit inaccurate (it doesn't take some of the file format optimization into account)
         // and the maintaining of the bufferSize is in general not perfect. This has always been the case for this class but we should
         // improve that. In particular, what we count is closer to the serialized value, but it's debatable that it's the right thing
-        // to count since it will take a lot more space in memory and the bufferSize if first and foremost used to avoid OOM when
+        // to count since it will take a lot more space in memory and the bufferSize is first and foremost used to avoid OOM when
         // using this writer.
         currentSize += UnfilteredSerializer.serializer.serializedSize(row, helper, 0, formatType.info.getLatestVersion().correspondingMessagingVersion());
     }
@@ -100,7 +101,7 @@ class SSTableSimpleUnsortedWriter extends AbstractSSTableSimpleWriter
     {
         try
         {
-            if (currentSize > bufferSize)
+            if (currentSize > maxSSTableSizeInBytes)
                 sync();
         }
         catch (IOException e)
